# Platinum

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/scene/: bunny.json  cornellbox-bunny.json  cornellbox-car.json  cornellbox-sphere.json  cornellbox.json  sphere.json
src/: Platinum.cpp  main.cpp
src/accelerator/: bvh.cpp  bvh.h  linear.cpp  linear.h  linear_aggregate.cpp  linear_aggregate.h
src/accelerators/: bvh.cpp  bvh.h  kd_tree.cpp  kd_tree.h  linear_aggregate.cpp  linear_aggregate.h
src/camera/: perspective.cpp  perspective.h  perspective_camera.cpp  perspective_camera.h
src/core/: CMakeLists.txt  aggregate.h  bsdf.cpp  bsdf.h  bvh.cpp  bvh.h  bxdf.cpp  bxdf.h  camera.cpp  camera.h  defines.h  entity.cpp  entity.h  film.cpp  film.h  filter.cpp  filter.h  fresnel.cpp  fresnel.h  hitable.cpp  hitable.h  integrator.cpp  integrator.h  interaction.cpp  interaction.h  light.cpp  light.h  logger.h  material.cpp  material.h  math_utils.h  medium.h  memory.cpp  memory.h  object.cpp  object.h  parallel.cpp  parallel.h  parser.cpp  parser.h  (+27 more)
src/filter/: box_filter.cpp  box_filter.h
src/geometry/: CMakeLists.txt  moving_sphere.cpp  moving_sphere.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h  triangle_mesh.cpp  volume.cpp  volume.h
src/integrator/: direct_integrator.cpp  direct_integrator.h  path_integrator.cpp  path_integrator.h  whitted_integrator.cpp  whitted_integrator.h
src/integrators/: path_integrator.cpp  path_integrator.h  whitted_integrator.cpp  whitted_integrator.h
src/light/: area_light.h  diffuse_light.cpp  diffuse_light.h  infinite_light.h
src/main/: main.cpp
src/material/: CMakeLists.txt  dielectric.cpp  isotropic.cpp  lambertian.cpp  matte.cpp  matte.h  metal.cpp  mirror.cpp  mirror.h
src/material/bxdf/: lambertian.cpp  lambertian.h  specular.cpp  specular.h
src/materials/: lambertian.cpp  lambertian.h  mirror.cpp  mirror.h
src/math/: bound.h  bounds.cpp  bounds.h  perlin.cpp  perlin.h  point.h  rand.h  ray.h  transform.cpp  transform.h  utils.h
src/sampler/: random_sampler.cpp  random_sampler.h
src/samplers/: random_sampler.cpp  random_sampler.h
src/shape/: sphere.cpp  sphere.h  triangle.cpp  triangle.h
src/shapes/: meshentity.cpp  meshentity.h  traingle.cpp  triangle.h
src/tests/: CMakeLists.txt  from_json.cpp  main.cpp  print.cpp
src/tests/bunny/: CMakeLists.txt  bunny.cpp
src/tests/car/: car.cpp
src/tests/cbox/: cornell_box.cpp
src/tests/parser/: parser.cpp
src/texture/: constant_texture.cpp  constant_texture.h
src/util/: stringprint.h
tests/: CMakeLists.txt
tests/cornell_box/: CMakeLists.txt  cornell_box.cpp  cornell_box.h
tests/from_json/: from_json.cpp
tests/sphere/: sphere.cpp
