
GET_DIR_NAME(DIRNAME)

set(TARGET_NAME "${TARGET_PREFIX}${DIRNAME}")
#多个源文件用 [空格] 分隔
#如：set(STR_TARGET_SOURCES "main.cpp src_2.cpp")
file(GLOB ALL_SOURCES
	"${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/*.h"
)
set(STR_TARGET_SOURCES "")
foreach(SOURCE ${ALL_SOURCES})
	set(STR_TARGET_SOURCES "${STR_TARGET_SOURCES} ${SOURCE}")
endforeach(SOURCE ${ALL_SOURCES})

string(REPLACE " " ";" LIST_TARGET_SOURCES ${STR_TARGET_SOURCES})

add_executable(${TARGET_NAME} ${LIST_TARGET_SOURCES})
set_target_properties(${TARGET_NAME} PROPERTIES OUTPUT_NAME ${PROJECT_NAME})
set_target_properties(${TARGET_NAME} PROPERTIES LINK_FLAGS /WHOLEARCHIVE:${PROJECT_NAME})
target_link_libraries(${TARGET_NAME} ${ALL_LIBS})